<?xml version="1.0"?>
<!--
  Copyright 2016 The Cartographer Authors

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<package format="2">
  <name>cartographer_ros</name>
  <version>1.0.0</version>
  <description>
    Cartographer is a system that provides real-time simultaneous localization
    and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
    configurations. This package provides Cartographer's ROS integration.
  </description>
  <maintainer email="google-cartographer@googlegroups.com">
    The Cartographer Authors
  </maintainer>
  <license>Apache 2.0</license>

  <url>https://github.com/googlecartographer/cartographer_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>g++-static</build_depend><!--静态g++库-->
  <build_depend>google-mock</build_depend><!--google C++ 单元测试框架-->
  <build_depend>python-sphinx</build_depend><!--项目文档生成工具-->
  <build_depend>protobuf-dev</build_depend><!--google内部使用的混合语言数据标准,用于序列化-->

  <depend>cartographer</depend>
  <depend>cartographer_ros_msgs</depend>

  <depend>libgflags-dev</depend><!--google开源的命令行库-->
  <depend>libgoogle-glog-dev</depend><!--google开源的应用级日志库-->
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>message_runtime</depend>
  <depend>yaml-cpp</depend>

  <test_depend>rosunit</test_depend>

  <export>
      <rviz plugin="${prefix}/rviz_plugin_description.xml" />
  </export>
</package>
